--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
   }
 }
