--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "mquery": ">=3.2.3",
-    "yargs-parser": ">=13.1.2"
+    "yargs-parser": ">=13.1.2",
+    "lodash": ">=4.17.19"
   }
 }
